--- a/config
+++ b/config
@@ -11,12 +11,12 @@ set $mod Mod4
 floating_modifier $mod
 
 # General
+focus_follows_mouse no
 default_border pixel 0
 gaps top 0
 gaps inner 5
 
-exec_always autorandr --change
-exec_always --no-startup-id "killall polybar; polybar --config=$HOME/.config/i3/polybar/config mybar"
+exec_always --no-startup-id $HOME/.config/i3/polybar/launch.sh
 
 # Font
 font pango:DejaVu Sans Mono 8
