--- a/polybar/config
+++ b/polybar/config
@@ -18,32 +18,32 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #222
-background-alt = #444
+background = #661F202A
+background-alt = #991F202A
 ;foreground = ${xrdb:color7:#222}
-foreground = #dfdfdf
-foreground-alt = #555
-primary = #ffb52a
-secondary = #e60053
+foreground = #ffffff
+foreground-alt = #ffffff
+primary = #DA5290
+secondary = #FFFFFF
 alert = #bd2c40
 
 [bar/mybar]
 monitor = ${env:MONITOR:}
 
 width = 100%
-height = 27
+height = 25
 ;offset-x = 1%
 ;offset-y = 1%
-radius = 6.0
+radius = 0
 fixed-center = false
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3
+line-size = 2
 line-color = #f00
 
-border-size = 4
+border-size = 1
 border-color = #00000000
 
 padding-left = 0
@@ -52,16 +52,18 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = fixed:pixelsize=10;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
+font-0 = "IBM Plex Mono:pixelsize=10;1"
+font-1 = "Font Awesome 6 Brands:pixelsize=11;1"
+font-2 = "Font Awesome 6 Free:pixelsize=10;1"
+font-3 = "FontAwesome:pixelsize=11;1"
 
 modules-left = i3
 modules-center = date
-modules-right = filesystem pulseaudio battery powermenu
+modules-right = filesystem pulseaudio powermenu 
 
 tray-position = right
 tray-padding = 2
+tray-detached = false
 ;tray-background = #0063ff
 
 ;wm-restack = bspwm
@@ -84,7 +86,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted =  %percentage_free%%
+label-mounted =  %free%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
@@ -94,6 +96,18 @@ format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
 
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;♞
+ws-icon-5 = 6;♞
+ws-icon-6 = 7;♞
+ws-icon-7 = 8;♞
+ws-icon-8 = 9;
+ws-icon-9 = 10;
+ws-icon-default = ♟
+
 ; Only show workspaces on the same output as the bar
 ;pin-workspaces = true
 
@@ -102,23 +116,23 @@ label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
-label-focused = %index%
+label-focused = %index%: %icon%
 label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.primary}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
+label-unfocused = %index%: %icon%
 label-unfocused-padding = 2
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %index%
+label-visible = %index%: %icon%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %index%
+label-urgent = %index%: %icon%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
 
@@ -158,7 +172,7 @@ date-alt = " %Y-%m-%d"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
+format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #0a6cf5
 
@@ -168,11 +182,12 @@ label = %date% %time%
 type = internal/pulseaudio
 
 format-volume = <label-volume>
-label-volume = VOL %percentage%%
+format-muted = <label-muted>
+label-volume =  %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted = 🔇 muted
-label-muted-foreground = #666
+label-muted = MUTED
+label-muted-foreground = #999
 
 [module/alsa]
 type = internal/alsa
@@ -242,7 +257,7 @@ expand-right = true
 
 format-spacing = 1
 
-label-open = 
+label-open =
 label-open-foreground = ${colors.secondary}
 label-close =  cancel
 label-close-foreground = ${colors.secondary}
