--- a/conf/assign.conf
+++ b/conf/assign.conf
@@ -1,6 +1,7 @@
 assign [class="Google-chrome"] 2
 assign [class="jetbrains-pycharm-ce"] 3
 assign [class="dolphin"] 4
+assign [class="vlc"] 7
+assign [class="TelegramDesktop"] 8
 assign [class="discord"] 9
-assign [class="vlc"] 8
 
