--- a/conf/startup.conf
+++ b/conf/startup.conf
@@ -7,6 +7,7 @@ exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id /usr/lib/polkit-kde-authentication-agent-1
 exec --no-startup-id picom -b --experimental-backends --config $HOME/.config/i3/picom.conf
 exec --no-startup-id copyq
+exec --no-startup-id discord
 exec --no-startup-id goldendict
 exec --no-startup-id google-chrome-stable
 exec --no-startup-id i3-msg "workspace 1; exec terminator"
