--- a/conf/window.conf
+++ b/conf/window.conf
@@ -3,3 +3,4 @@ for_window [class="Pavucontrol"] floating enable
 for_window [class="Blueberry.py"] floating enable
 for_window [class="Xfce4-power-manager-settings"] floating enable
 for_window [class="^kdeconnect+"] floating enable
+for_window [class="copyq"] floating enable
