--- a/conf/workspaces.conf
+++ b/conf/workspaces.conf
@@ -35,17 +35,17 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # Multiple monitor
-set $laptop "eDP1"
-set $external "HDMI1"
+set $first "eDP1"
+set $second "HDMI1"
 
 # Bind workspace to monitor
-workspace $ws1 output $external
-workspace $ws2 output $external
-workspace $ws3 output $external
-workspace $ws4 output $external
-workspace $ws5 output $external
-workspace $ws6 output $external
-workspace $ws7 output $external
-workspace $ws8 output $external
-workspace $ws9 output $external
-workspace $ws10 output $laptop
+workspace $ws1 output $first
+workspace $ws2 output $first
+workspace $ws3 output $first
+workspace $ws4 output $first
+workspace $ws5 output $first
+workspace $ws6 output $first
+workspace $ws7 output $first
+workspace $ws8 output $first
+workspace $ws9 output $first
+workspace $ws10 output $second
