--- a/conf/assign.conf
+++ b/conf/assign.conf
@@ -1,7 +1,7 @@
-assign [class="Google-chrome"] 2
-assign [class="jetbrains-pycharm-ce"] 3
-assign [class="dolphin"] 4
-assign [class="vlc"] 7
-assign [class="TelegramDesktop"] 8
-assign [class="discord"] 9
+assign [class="Google-chrome" window_type="normal"] 2
+assign [class="jetbrains-pycharm-ce" window_type="normal"] 3
+assign [class="dolphin" window_type="normal"] 4
+assign [class="vlc" window_type="normal"] 7
+assign [class="TelegramDesktop" window_type="normal"] 8
+assign [class="discord" window_type="normal"] 9
 
