--- a/conf/bindkeys.conf
+++ b/conf/bindkeys.conf
@@ -1,9 +1,9 @@
 # Custom
 bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/launchers/misc/launcher.sh
 bindsym $mod+p exec --no-startup-id pavucontrol
-bindsym $mod+l exec "dm-tool lock"
 bindsym $mod+c exec "google-chrome-stable"
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Exit i3?' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+l exec betterlockscreen -l --span
 
 # Default
 bindsym $mod+Return exec i3-sensible-terminal
