--- a/conf/startup.conf
+++ b/conf/startup.conf
@@ -6,11 +6,13 @@ exec --no-startup-id xfce4-power-manager --daemon
 exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id /usr/lib/polkit-kde-authentication-agent-1
 exec --no-startup-id picom -b --experimental-backends --config $HOME/.config/i3/picom.conf
+exec --no-startup-id i3-msg "workspace 1; exec terminator"
 exec --no-startup-id copyq
 exec --no-startup-id discord
 exec --no-startup-id goldendict
 exec --no-startup-id google-chrome-stable
-exec --no-startup-id i3-msg "workspace 1; exec terminator"
+exec --no-startup-id libinput-gestures-setup start
+exec --no-startup-id betterlockscreen
 
 exec_always --no-startup-id $HOME/.config/i3/polybar/launch.sh
 exec_always --no-startup-id feh --no-fehbg --bg-fill $HOME/Pictures/wallpaper.jpg
