--- a/conf/bindkeys.conf
+++ b/conf/bindkeys.conf
@@ -1,4 +1,5 @@
 # Custom
+bindsym XF86Display exec --no-startup-id /usr/bin/arandr
 bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/launchers/misc/launcher.sh
 bindsym $mod+p exec --no-startup-id pavucontrol
 bindsym $mod+c exec "google-chrome-stable"
