--- a/conf/window.conf
+++ b/conf/window.conf
@@ -4,3 +4,4 @@ for_window [class="Blueberry.py"] floating enable
 for_window [class="Xfce4-power-manager-settings"] floating enable
 for_window [class="^kdeconnect+"] floating enable
 for_window [class="copyq"] floating enable
+for_window [class="Arandr"] floating enable
