--- a/picom.conf
+++ b/picom.conf
@@ -8,7 +8,7 @@
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = true;
+shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -133,7 +133,10 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-# opacity-rule = []
+opacity-rule = [ 
+  "95:class_g = 'Terminator'",
+  "95:class_g = 'jetbrains-pycharm-ce'",
+];
 
 
 #################################
@@ -143,7 +146,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 0
+corner-radius = 13
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
