--- a/conf/startup.conf
+++ b/conf/startup.conf
@@ -15,5 +15,7 @@ exec --no-startup-id libinput-gestures-setup start
 exec --no-startup-id betterlockscreen
 
 exec_always --no-startup-id $HOME/.config/i3/polybar/launch.sh
-exec_always --no-startup-id feh --no-fehbg --bg-fill $HOME/Pictures/wallpaper.jpg
-exec_always --no-startup-id $HOME/.config/i3/script/monitor.sh
+exec_always --no-startup-id "$HOME/.config/i3/script/monitor.sh; feh --no-fehbg --bg-fill $HOME/Pictures/wallpaper.jpg"
+
+# comment feh command and joint it into monitor.
+# exec_always --no-startup-id feh --no-fehbg --bg-fill $HOME/Pictures/wallpaper.jpg
