--- a/conf/window.conf
+++ b/conf/window.conf
@@ -5,3 +5,4 @@ for_window [class="Xfce4-power-manager-settings"] floating enable
 for_window [class="^kdeconnect+"] floating enable
 for_window [class="copyq"] floating enable
 for_window [class="Arandr"] floating enable
+for_window [class="baobab"] floating enable
