--- a/conf/startup.conf
+++ b/conf/startup.conf
@@ -1,4 +1,5 @@
 exec --no-startup-id nm-applet
+# exec --no-startup-id firewall-applet
 exec --no-startup-id blueberry-tray
 exec --no-startup-id ibus-daemon -drx
 exec --no-startup-id /usr/lib/kdeconnectd
