--- a/picom.conf
+++ b/picom.conf
@@ -136,6 +136,10 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 opacity-rule = [ 
   "95:class_g = 'Terminator'",
   "95:class_g = 'jetbrains-pycharm-ce'",
+  "95:class_g = 'MongoDB Compass'",
+  "95:class_g = 'jetbrains-webstorm'",
+  "95:class_g = 'dolphin'",
+  "95:class_g = 'Tauon Music Box'",
 ];
 
 
