--- a/conf/bindkeys.conf
+++ b/conf/bindkeys.conf
@@ -1,9 +1,9 @@
 # Custom
 bindsym XF86Display exec --no-startup-id /usr/bin/arandr
-bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/launchers/misc/launcher.sh
+bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/launchers/text/launcher.sh
 bindsym $mod+p exec --no-startup-id pavucontrol
 bindsym $mod+c exec "google-chrome-stable"
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Exit i3?' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e mode "exit: [l]ogout, [r]eboot, [s]hutdown"
 bindsym $mod+l exec betterlockscreen -l --span
 
 # Default
