--- a/polybar/config
+++ b/polybar/config
@@ -100,8 +100,8 @@ ws-icon-0 = 1;
 ws-icon-1 = 2;
 ws-icon-2 = 3;
 ws-icon-3 = 4;
-ws-icon-4 = 5;♞
-ws-icon-5 = 6;♞
+ws-icon-4 = 5;
+ws-icon-5 = 6;
 ws-icon-6 = 7;♞
 ws-icon-7 = 8;
 ws-icon-8 = 9;
@@ -164,7 +164,7 @@ card = intel_backlight
 
 [module/date]
 type = internal/date
-interval = 5
+interval = 1.0
 
 date =
 date-alt = " %Y-%m-%d"
