--- a/conf/bindkeys.conf
+++ b/conf/bindkeys.conf
@@ -3,8 +3,7 @@ bindsym XF86Display exec --no-startup-id /usr/bin/arandr
 bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/launchers/text/launcher.sh
 bindsym $mod+p exec --no-startup-id pavucontrol
 bindsym $mod+c exec "google-chrome-stable"
-bindsym $mod+Shift+e mode "exit: [l]ogout, [r]eboot, [s]hutdown"
-bindsym $mod+l exec betterlockscreen -l --span
+bindsym $mod+l exec "betterlockscreen -l"
 
 # Default
 bindsym $mod+Return exec i3-sensible-terminal
@@ -18,7 +17,7 @@ bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 bindsym $mod+space focus mode_toggle
-bindsym $mod+a focus parent
+# bindsym $mod+a focus parent
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -37,3 +36,8 @@ bindsym $mod+e layout toggle split
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 bindsym $mod+r mode "resize"
+
+# Modes
+bindsym $mod+Shift+e mode "exit: [l]ogout, [r]eboot, [s]hutdown"
+bindsym $mod+a mode "App: [c]hrome, 'd'olphin, 'p'ycharm"
+
