--- a/conf/modes.conf
+++ b/conf/modes.conf
@@ -23,3 +23,10 @@ mode "exit: [l]ogout, [r]eboot, [s]hutdown" {
   bindsym Return mode "default"
 }
 
+mode "App: [c]hrome, 'd'olphin, 'p'ycharm" {
+  bindsym c exec google-chrome-stable, mode "default"
+  bindsym d exec dolphin, mode "default"
+  bindsym p exec pycharm, mode "default"
+  bindsym Escape mode "default"
+  bindsym Return mode "default"
+}
