--- a/conf/startup.conf
+++ b/conf/startup.conf
@@ -9,10 +9,10 @@ exec --no-startup-id /usr/lib/polkit-kde-authentication-agent-1
 exec --no-startup-id picom -b --experimental-backends --config $HOME/.config/i3/picom.conf
 exec --no-startup-id i3-msg "workspace 1; exec terminator"
 exec --no-startup-id copyq
-exec --no-startup-id discord
+# exec --no-startup-id discord
 exec --no-startup-id goldendict
-exec --no-startup-id google-chrome-stable
-exec --no-startup-id libinput-gestures-setup start
+# exec --no-startup-id google-chrome-stable
+# exec --no-startup-id libinput-gestures-setup start
 exec --no-startup-id betterlockscreen
 
 exec_always --no-startup-id $HOME/.config/i3/polybar/launch.sh
