--- a/conf/window.conf
+++ b/conf/window.conf
@@ -6,3 +6,4 @@ for_window [class="^kdeconnect+"] floating enable
 for_window [class="copyq"] floating enable
 for_window [class="Arandr"] floating enable
 for_window [class="baobab"] floating enable
+for_window [class="helvum"] floating enable
