--- a/conf/bindkeys.conf
+++ b/conf/bindkeys.conf
@@ -1,12 +1,12 @@
 # Custom
 bindsym XF86Display exec --no-startup-id /usr/bin/arandr
-bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/launchers/text/launcher.sh
+bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/launchers/type-1/launcher.sh
 bindsym $mod+p exec --no-startup-id pavucontrol
 bindsym $mod+c exec "google-chrome-stable"
-bindsym $mod+l exec "betterlockscreen -l"
+bindsym $mod+l exec "betterlockscreen -l" 
 
 # Default
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec kitty
 bindsym $mod+Shift+q kill
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
