--- a/conf/startup.conf
+++ b/conf/startup.conf
@@ -10,7 +10,7 @@ exec --no-startup-id picom -b --experimental-backends --config $HOME/.config/i3/
 exec --no-startup-id i3-msg "workspace 1; exec terminator"
 exec --no-startup-id copyq
 # exec --no-startup-id discord
-exec --no-startup-id goldendict
+# exec --no-startup-id goldendict
 # exec --no-startup-id google-chrome-stable
 # exec --no-startup-id libinput-gestures-setup start
 exec --no-startup-id betterlockscreen
@@ -19,4 +19,5 @@ exec_always --no-startup-id $HOME/.config/i3/polybar/launch.sh
 exec_always --no-startup-id "$HOME/.config/i3/script/monitor.sh; feh --no-fehbg --bg-fill $HOME/Pictures/wallpaper.jpg"
 
 # comment feh command and joint it into monitor.
-# exec_always --no-startup-id feh --no-fehbg --bg-fill $HOME/Pictures/wallpaper.jpg
+#
+# exec_always --no-startup-id feh --no-fehbg --bg-fill "$HOME/Pictures/wallpaper.jpg"
