--- a/conf/bindkeys.conf
+++ b/conf/bindkeys.conf
@@ -6,7 +6,7 @@ bindsym $mod+c exec "google-chrome-stable"
 bindsym $mod+l exec "betterlockscreen -l" 
 
 # Default
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
