fix: picom opacity

--- a/conf/workspaces.conf
+++ b/conf/workspaces.conf
@@ -44,8 +44,8 @@ workspace $ws2 output $first
 workspace $ws3 output $first
 workspace $ws4 output $first
 workspace $ws5 output $first
-workspace $ws6 output $first
-workspace $ws7 output $first
-workspace $ws8 output $first
-workspace $ws9 output $first
+workspace $ws6 output $second
+workspace $ws7 output $second
+workspace $ws8 output $second
+workspace $ws9 output $second
 workspace $ws10 output $second
