fix: assign window to workspace

--- a/conf/assign.conf
+++ b/conf/assign.conf
@@ -1,8 +1,8 @@
-assign [class="Google-chrome" window_type="normal"] 2
-assign [class="jetbrains-pycharm-ce" window_type="normal"] 3
+assign [class="Google-chrome" window_type="normal"] 6
+assign [class="jetbrains-pycharm" window_type="normal"] 7
 assign [class="dolphin" window_type="normal"] 4
-assign [class="MongoDB Compass" window_type="normal"] 5
+assign [class="MongoDB Compass" window_type="normal"] 8
 assign [class="vlc" window_type="normal"] 7
-assign [class="TelegramDesktop" window_type="normal"] 8
+assign [class="TelegramDesktop" window_type="normal"] 0
 assign [class="discord" window_type="normal"] 9
 assign [class="Tauon Music Box" window_type="normal"] 6
