--- a/polybar/config
+++ b/polybar/config
@@ -35,7 +35,7 @@ height = 25
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 0
-fixed-center = false
+fixed-center = true 
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -56,10 +56,10 @@ font-0 = "IBM Plex Mono:pixelsize=10;1"
 font-1 = "Font Awesome 6 Brands:pixelsize=11;1"
 font-2 = "Font Awesome 6 Free:pixelsize=10;1"
 font-3 = "FontAwesome:pixelsize=11;1"
-
+font-4 = "Font Awesome 6 Free Solid"
 modules-left = i3
 modules-center = date
-modules-right = filesystem powermenu 
+modules-right = memory cpu 
 
 tray-position = right
 tray-padding = 2
@@ -90,6 +90,32 @@ label-mounted =  %free%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
+[module/cpu]
+type = internal/cpu
+
+; Seconds to sleep between updates
+; Default: 1
+interval = 0.5
+format = <label>
+label =  %percentage%%
+
+; Default: 80
+; New in version 3.6.0
+warn-percentage = 95
+
+[module/memory]
+type = internal/memory
+
+; Seconds to sleep between updates
+; Default: 1
+interval = 3
+
+; Default: 90
+; New in version 3.6.0
+warn-percentage = 95
+format = <label>
+label =   %gb_used%
+
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
@@ -100,12 +126,12 @@ ws-icon-0 = 1;
 ws-icon-1 = 2;
 ws-icon-2 = 3;
 ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;♞
-ws-icon-7 = 8;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
+ws-icon-6 = 7;
+ws-icon-7 = 8;
 ws-icon-8 = 9;
-ws-icon-9 = 10;
+ws-icon-9 = 0;
 ws-icon-default = ♟
 
 ; Only show workspaces on the same output as the bar
