fix: add opacity for discord

--- a/picom.conf
+++ b/picom.conf
@@ -139,7 +139,7 @@ opacity-rule = [
   "80:class_g = 'MongoDB Compass'",
   "80:class_g = 'Nemo'",
   "85:class_g = 'Code'",
-  "95:class_g = 'Tauon Music Box'",
+  "95:class_g = 'discord'"
 ];
 
 
