fix: update icon workspace

--- a/conf/workspaces.conf
+++ b/conf/workspaces.conf
@@ -43,7 +43,7 @@ workspace $ws1 output $first
 workspace $ws2 output $first
 workspace $ws3 output $first
 workspace $ws4 output $first
-workspace $ws5 output $first
+workspace $ws5 output $second
 workspace $ws6 output $second
 workspace $ws7 output $second
 workspace $ws8 output $second
