fix: i3 for ubuntu 22.04

--- a/config
+++ b/config
@@ -14,8 +14,8 @@ floating_modifier $mod
 # General
 focus_follows_mouse no
 default_border pixel 0
-gaps top 0
-gaps inner 5
+#gaps top 0
+#gaps inner 5
 
 
 # Font
