--- a/conf/assign.conf
+++ b/conf/assign.conf
@@ -1,5 +1,6 @@
-assign [class="Google-chrome" window_type="normal"] 6
-assign [class="jetbrains-pycharm" window_type="normal"] 7
+#assign [class="Gnome-terminal" window_type="normal"] 1
+assign [class="Google-chrome" window_type="normal"] 2
+assign [class="jetbrains-pycharm" window_type="normal"] 3
 assign [class="dolphin" window_type="normal"] 4
 assign [class="MongoDB Compass" window_type="normal"] 8
 assign [class="vlc" window_type="normal"] 7
