--- a/conf/bindkeys.conf
+++ b/conf/bindkeys.conf
@@ -1,9 +1,10 @@
 # Custom
 bindsym XF86Display exec --no-startup-id /usr/bin/arandr
-bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/launchers/type-1/launcher.sh
+bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/launchers/colorful/launcher.sh
 bindsym $mod+p exec --no-startup-id pavucontrol
 bindsym $mod+c exec "google-chrome-stable"
-bindsym $mod+l exec "betterlockscreen -l" 
+#bindsym $mod+l exec "betterlockscreen -l" 
+bindsym $mod+l exec "i3lock -c 000000" 
 
 # Default
 bindsym $mod+Return exec i3-sensible-terminal
