--- a/conf/workspaces.conf
+++ b/conf/workspaces.conf
@@ -35,7 +35,7 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # Multiple monitor
-set $first "eDP-1"
+set $first "DP-1"
 set $second "HDMI-1"
 
 # Bind workspace to monitor
