--- a/picom.conf
+++ b/picom.conf
@@ -134,7 +134,9 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 opacity-rule = [ 
-  "95:class_g = 'Terminator'",
+  "95:class_g = 'Gnome-terminal'",
+  "95:class_g = 'jetbrains-pycharm'",
+  "80:class_g = 'Org.gnome.Nautilus'",
   "95:class_g = 'jetbrains-pycharm'",
   "95:class_g = 'MongoDB Compass'",
   "95:class_g = 'Nemo'",
